[tool.poetry]
name = "python-benchmarking"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "python_benchmarking"}]

[tool.poetry.dependencies]
python = "^3.6"
numpy = "^1.20"
pandas = "^1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
